--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -22,29 +22,37 @@
     }
 </head>
 <body>
-	<nav id="banner" class="navbar navbar-expand-md navbar-dark mb-4">
-		<div class="site-icon pixelart-image"></div>
-		<div id="mantra">
-			<a id="brand" asp-page="/Index">TASVideos</a>
-			<div id="mantra1">Tool-assisted game movies</div>
-			<div id="mantra2">When human skills are just not enough</div>
-		</div>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarCollapse">
-			<div class="container">
-				<div class="d-lg-flex">
-					<div class="mr-auto">
-						<partial name="_NavBarPartial" />
-					</div>
-					<div>
-						<partial name="_LoginPartial" />
-					</div>
-				</div>
-			</div>
-		</div>
-	</nav>
+    <nav id="banner" class="navbar navbar-expand-md navbar-dark mb-4">
+        <picture>
+            <source srcset="/images/tasvideosbg.avif" type="image/avif">
+            <source srcset="/images/tasvideosbg.webp" type="image/webp">
+            <img class="site-banner" src="/images/tasvideosbg.jpg">
+        </picture>
+        <picture>
+            <source srcset="/images/logo-light.webp" type="image/webp">
+            <img class="site-icon pixelart-image" src="/images/logo-light.png">
+        </picture>
+        <div id="mantra">
+            <a id="brand" asp-page="/Index">TASVideos</a>
+            <div id="mantra1">Tool-assisted game movies</div>
+            <div id="mantra2">When human skills are just not enough</div>
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="container">
+                <div class="d-lg-flex">
+                    <div class="mr-auto">
+                        <partial name="_NavBarPartial" />
+                    </div>
+                    <div>
+                        <partial name="_LoginPartial" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 	@{
 		var title = ViewData["Title"]?.ToString();
