Redesign of the publication page (#389)
* redesign standalone publication page

* publication page color and design change

* adjust featured frontpage publication to other design

* no hr needed anymore

* make the watch links open in a new tab

* publication page: fix background pixel error

* publication page: reorder additional information box

* make primary color blue and previous one to secondary

* make movie link instruction gray

since this is a wiki element, it should technically be changed there, but we don't have a way to change color yet

* remove unneeded margin added by h4, it's already in a card-header

restores vertical centering, front page is already fine because of the h5 for the "Featured" label

* return page title to purple to fit better with the header

--- a/TASVideos/Pages/Publications/Index.cshtml
+++ b/TASVideos/Pages/Publications/Index.cshtml
@@ -8,6 +8,8 @@
 @foreach (var movie in Model.Movies)
 {
 	<partial name="_MovieModule" model="movie" />
-	<hr />
+	<br />
 }
-@await Component.RenderWiki("System/MovieLinkInstruction")
+<div class="text-muted">
+    @await Component.RenderWiki("System/MovieLinkInstruction")
+</div>
