--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -2,7 +2,7 @@
 
 @inject IAwards Awards 
 @{
-	var publicationAwards = await Awards.ForPublication(Model.Id);
+    var publicationAwards = await Awards.ForPublication(Model.Id);
 }
 
 @functions {
@@ -36,136 +36,155 @@
 		return "";
 	}
 }
-
-<div condition="@Model.ObsoletedById.HasValue" class="card-header text-danger pt-2 pb-2 bg-white">
-	<pub-link id="@Model.ObsoletedById!.Value" class="btn btn-sm btn-primary bg-danger border-danger">This movie has been obsoleted</pub-link>
-</div>
-<card class="border-0 rounded-bottom">
-	<cardheader class="d-flex flex-row align-items-center">
-		<img class="pixelart-image" condition="!string.IsNullOrWhiteSpace(Model.TierIconPath)" src="/@Model.TierIconPath" />
-        <h4 class="m-0 ml-2 mr-2">@Model.Title</h4>
-		<div class="pull-right">
-			@foreach (var flag in Model.Flags.Where(f => !string.IsNullOrWhiteSpace(f.IconPath)))
-			{
-				<a href="@flag.LinkPath">
-					<img class="pixelart-image" title="@flag.Name" alt="[@flag.Name]" src="/@flag.IconPath" />
-				</a>
-			}
-		</div>
+<card class="border border-primary">
+	<cardheader class="bg-bgprimary">
+        <row>
+            <div class="pixelart-image float-left" condition="!string.IsNullOrWhiteSpace(Model.TierIconPath)">
+                <img src="/@Model.TierIconPath" />
+            </div>
+            <h4 class="col px-2 m-0"><a asp-page="View" asp-route-id="@Model.Id" class="text-decoration-none"><span class="text-dark">@Model.Title</span></a></h4>
+            <div class="float-right">
+            @foreach (var flag in Model.Flags.Where(f => !string.IsNullOrWhiteSpace(f.IconPath)))
+            {
+                <a href="@flag.LinkPath">
+                    <img class="pixelart-image" title="@flag.Name" alt="[@flag.Name]" src="/@flag.IconPath" />
+                </a>
+            }
+            </div>
+        </row>
 	</cardheader>
-	<cardbody>
-		<row>
-			<div class="col-md-3">
-				<div>
-					<img src="~/media/@Model.Screenshot.Path"
-						 alt="@Model.Screenshot.Description"
-						 title="@Model.Screenshot.Description"
-						 class="w-100 pixelart-image"
-						 loading="lazy" />
-				</div>
-				@foreach (var url in Model.OnlineWatchingUrls)
-				{
-					<a href="@url" class="btn btn-primary btn-sm mt-1">Watch</a>
-				}
-				<a asp-page="View" asp-route-id="@Model.Id" class="btn btn-secondary btn-sm mt-1">Publication</a>
-				<a asp-page="/Submissions/View" asp-route-id="@Model.SubmissionId" class="btn btn-secondary btn-sm mt-1">Submission</a>
-				<a permission="EditPublicationMetaData"
-				   asp-page="Edit"
-				   asp-route-id="@Model.Id"
-				   class="btn btn-secondary btn-sm mt-1">Edit</a>
-				<a permission="CatalogMovies"
-				   asp-page="/Publications/Catalog"
-				   asp-route-id="@Model.Id"
-				   class="btn btn-secondary btn-sm mt-1">Catalog</a>
-				<a condition="@Model.TopicId > 0"
-				   asp-page="/Forum/Topics/Index"
-				   asp-route-id="@Model.TopicId"
-				   class="btn btn-secondary btn-sm mt-1">
-					Discuss
-				</a>
-				<a asp-page="/Games/PublicationHistory"
-					asp-route-id="@Model.GameId"
-					asp-route-highlight="@Model.Id"
-					class="btn btn-secondary btn-sm mt-1">
-					History
-				</a>
-				<a
-					permission="EditPublicationMetaData"
-					href="/MovieMaintenanceLog?id=@Model.Id"
-					class="btn btn-secondary btn-sm mt-1">
-					Logs
-				</a>
-			</div>
-			<div class="col-md-7">
-				<row>
-					<div class="col-lg-4">
-						<a asp-page="/Publications/View" asp-page-handler="Download" asp-route-id="@Model.Id">Movie file (@System.IO.Path.GetExtension(Model.MovieFileName))</a>
-						<div condition="Model.MovieFileLinks.Any()" class="mt-2">
-							@foreach (var file in Model.MovieFileLinks)
-							{
-								<a title="@file.Path" asp-page="/Publications/View" asp-page-handler="DownloadAdditional" asp-route-fileId="@file.Id">(@file.Description)</a>
-							}
-						</div>
-					</div>
-					@foreach (var torrent in Model.TorrentLinks)
-					{
-						<a class="col-lg-4" href="~/torrent/@torrent.Path">A/V file via BitTorrent @TorrentRemark(torrent.Path, torrent.Id)</a>
-					}
-					<a class="col-lg-4" condition="@(!string.IsNullOrWhiteSpace(Model.MirrorSiteUrl))" href="@Model.MirrorSiteUrl">A/V file via Mirror</a>
-				</row>
-				<row condition="Model.ObsoletedMovies.Any()">
-					@foreach (var obsoletedMovie in Model.ObsoletedMovies)
-					{
-						<column class="mt-2 mb-2">
-							Obsoletes:<br />
-							<pub-link id="obsoletedMovie.Id">@obsoletedMovie.Title</pub-link>
-						</column>
-					}
-				</row>
-				<fullrow>
-					<div><small>@Model.CreateTimestamp.Date.ToShortDateString()</small></div>
-					@await Component.RenderWiki(LinkConstants.PublicationWikiPage + Model.Id)
-				</fullrow>
-				<fullrow>
-					<div>
-						<span permission="RateMovies">
-							<a asp-page="/Publications/Rate"
-							   asp-route-id="@Model.Id"
-							   asp-route-returnUrl="@Context.ReturnUrl()">
-								Rating
-							</a>: &nbsp;
-						</span>
-						<span condition="!ViewData.UserHas(PermissionTo.RateMovies)">Rating:</span>
-						<span condition="Model.RatingCount > 2">@Math.Round(Model.OverallRating ?? 0, 2)</span>
-						<span condition="Model.RatingCount <= 2">(Too few votes to display rating)</span>
-						<span>(<a asp-page="/Ratings/Index" asp-route-id="@Model.Id">@Model.RatingCount votes</a>)</span>
-					</div>
-				</fullrow>
-			</div>
-			<div class="col-md-2">
-				<small condition="Model.GenreTags.Any()">
-					Genre:<br />
-					@foreach (var genre in Model.GenreTags)
-					{
-						<a href="/Movies-@genre.Code">@genre.DisplayName</a>
-					}
-					<br />
-				</small>
-				<small condition="Model.Tags.Any()">
-					Tags:<br />
-					@foreach (var tag in Model.Tags)
-					{
-						<a href="/Movies-@tag.Code">@tag.DisplayName</a><br />
-					}
-				</small>
-				<small condition="!string.IsNullOrWhiteSpace(Model.EmulatorVersion)">
-					Emulator Version:<br />@Model.EmulatorVersion
-				</small>
-			</div>
-			@foreach (var award in publicationAwards.OrderByDescending(a => a.Year))
-			{
-				<partial name="_Award" model="award" />
-			}
-		</row>
-	</cardbody>
+    <cardbody class="px-3 py-0">
+        <div condition="@Model.ObsoletedById.HasValue" class="col card-subtitle text-danger my-2">
+            <row>
+                <b>This movie has been obsoleted!</b>
+            </row>
+            <row>
+                <pub-link id="Model.ObsoletedById!.Value" class="btn btn-danger btn-sm">Obsoleting Movie</pub-link>
+            </row>
+        </div>
+        <row class="bg-bgsecondary py-3 mx-n3">
+            <div class="col-auto mb-4 mb-md-0 mx-auto text-center text-md-left">
+                <div>
+                    <img src="~/media/@Model.Screenshot.Path"
+                         alt="@Model.Screenshot.Description"
+                         title="@Model.Screenshot.Description"
+                         class="w-100 pixelart-image"
+                         loading="lazy" />
+                </div>
+                @foreach (var url in Model.OnlineWatchingUrls)
+                {
+                    <a href="@url" class="btn btn-primary btn-sm mt-1" target="_blank">Watch</a>
+                }
+                <a asp-page="/Publications/View" asp-page-handler="Download" asp-route-id="@Model.Id" class="btn btn-primary btn-sm mt-1">Download (@System.IO.Path.GetExtension(Model.MovieFileName))</a>
+                <br />
+                <a asp-page="/Submissions/View" asp-route-id="@Model.SubmissionId" class="btn btn-secondary btn-sm mt-1">Submission</a>
+                <a condition="@Model.TopicId > 0"
+                   asp-page="/Forum/Topics/Index"
+                   asp-route-id="@Model.TopicId"
+                   class="btn btn-secondary btn-sm mt-1">
+                    Discuss
+                </a>
+                <br />
+                <a permission="EditPublicationMetaData"
+                   asp-page="Edit"
+                   asp-route-id="@Model.Id"
+                   class="btn btn-secondary btn-sm mt-1">Edit</a>
+                <a permission="CatalogMovies"
+                   asp-page="/Publications/Catalog"
+                   asp-route-id="@Model.Id"
+                   class="btn btn-secondary btn-sm mt-1">Catalog</a>
+                <a asp-page="/Games/PublicationHistory"
+                   asp-route-id="@Model.GameId"
+                   asp-route-highlight="@Model.Id"
+                   class="btn btn-secondary btn-sm mt-1">
+                    History
+                </a>
+                <a permission="EditPublicationMetaData"
+                   href="/MovieMaintenanceLog?id=@Model.Id"
+                   class="btn btn-secondary btn-sm mt-1">
+                    Logs
+                </a>
+                <br />
+                <div>
+                    <span permission="RateMovies">
+                        <a asp-page="/Publications/Rate"
+                           asp-route-id="@Model.Id"
+                           asp-route-returnUrl="@Context.ReturnUrl()">
+                            Rating
+                        </a>: &nbsp;
+                    </span>
+                    <span condition="!ViewData.UserHas(PermissionTo.RateMovies)">Rating:</span>
+                    <span condition="Model.RatingCount > 2">@Math.Round(Model.OverallRating ?? 0, 2)</span>
+                    <span condition="Model.RatingCount <= 2">(Too few votes to display rating)</span>
+                    <span>(<a asp-page="/Ratings/Index" asp-route-id="@Model.Id">@Model.RatingCount votes</a>)</span>
+                </div>
+                @foreach (var award in publicationAwards.OrderByDescending(a => a.Year))
+                {
+                    <partial name="_Award" model="award" />
+                }
+            </div>
+            <div class="col-md">
+                <fullrow>
+                    <div><small>@Model.CreateTimestamp.Date.ToShortDateString()</small></div>
+                    @await Component.RenderWiki(LinkConstants.PublicationWikiPage + Model.Id)
+                </fullrow>
+            </div>
+        </row>
+        <row condition="Model.ObsoletedMovies.Any()" class="border-bottom mb-2">
+            @foreach (var obsoletedMovie in Model.ObsoletedMovies)
+            {
+                <column class="mt-2 mb-2">
+                    Obsoletes:<br />
+                    <pub-link id="obsoletedMovie.Id">@obsoletedMovie.Title</pub-link>
+                </column>
+            }
+        </row>
+        <row class="mb-2">
+            <div condition="Model.GenreTags.Any()" class="col-auto">
+                <small>
+                    Genres:<br />
+                    @foreach (var genre in Model.GenreTags)
+                    {
+                        <a href="/Movies-@genre.Code" class="ml-2">@genre.DisplayName</a><br />
+                    }
+                </small>
+            </div>
+            <div condition="Model.Tags.Any()" class="col-auto">
+                <small>
+                    Tags:<br />
+                    @foreach (var tag in Model.Tags)
+                    {
+                        <a href="/Movies-@tag.Code" class="ml-2">@tag.DisplayName</a><br />
+                    }
+                </small>
+            </div>
+            <div class="col-auto">
+                <small condition="!string.IsNullOrWhiteSpace(Model.MirrorSiteUrl) || Model.TorrentLinks.Any()">
+                    A/V files:<br />
+                    <a condition="@(!string.IsNullOrWhiteSpace(Model.MirrorSiteUrl))" href="@Model.MirrorSiteUrl" class="ml-2">A/V file via Mirror<br /></a>
+                    <span condition="Model.TorrentLinks.Any()">
+                        @foreach (var torrent in Model.TorrentLinks)
+                        {
+                            <a href="~/torrent/@torrent.Path" class="ml-2">A/V file via BitTorrent @TorrentRemark(torrent.Path, torrent.Id)</a>
+                            <br />
+                        }
+                    </span>
+                </small>
+            </div>
+            <div class="col-auto">
+                <small condition="!string.IsNullOrWhiteSpace(Model.EmulatorVersion)">
+                    Emulator Version:<br /><span class="ml-2">@Model.EmulatorVersion</span>
+                </small>
+            </div>
+            <div condition="Model.MovieFileLinks.Any()" class="col-auto">
+                <small>
+                    Additional Downloads:<br />
+                    @foreach (var file in Model.MovieFileLinks)
+                    {
+                        <a class="ml-2" title="@file.Path" asp-page="/Publications/View" asp-page-handler="DownloadAdditional" asp-route-fileId="@file.Id">(@file.Description)</a>
+                    }
+                </small>
+            </div>
+        </row>
+    </cardbody>
 </card>
