--- a/TASVideos/wwwroot/css/variables.scss
+++ b/TASVideos/wwwroot/css/variables.scss
@@ -1,10 +1,10 @@
-$primary: 	#6a37a0;
-$secondary: #9f76c0;
+$primary:   #105cb6;
+$secondary: #6a37a0;
 $success: 	#28a745;
 $danger: 	#dc3545;
 $warning: 	#ffc107;
 $info: 		#c2d4fc;
-$dark: 		#343a40;
+$dark: 		#000000;
 $light: 	#f8f9fa;
 $muted: 	#6c757d;
 $white: 	#fff;
