--- a/TASVideos/Pages/Shared/Components/MovieChangeLog/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/MovieChangeLog/Default.cshtml
@@ -5,7 +5,7 @@
         <h4>@pubGroup.Date.ToShortDateString()</h4>
         foreach (var pub in pubGroup.Pubs)
         {
-                <div class="ml-2"><a href="/@(pub.Id + "M")">
+                <div class="ml-2"><a asp-page="/Publications/View" asp-route-id="@(pub.Id)">
                         @pub.Name
                     </a>
                 @if (pub.IsNewGame)
