remove unneeded bootstrap lib download
also fix comment in site scss

--- a/TASVideos/wwwroot/css/site.scss
+++ b/TASVideos/wwwroot/css/site.scss
@@ -1,4 +1,5 @@
-﻿:root {
+﻿/*** Bootstrap customizations **/
+:root {
 	--bs-primary: #105cb6;
 	--bs-primary-rgb: 16, 92, 182;
 	--bs-secondary: #6a37a0;
@@ -155,8 +156,6 @@ h4 {
 	height: 34px;
 	width: 1px;
 }
-
-/*** Bootstrap customizations **/
 
 /* Firefox fix for file inputs */
 @-moz-document url-prefix() {
