--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -25,11 +25,13 @@
 <body>
     <nav id="banner" class="navbar navbar-expand-md navbar-dark mb-4">
 		<div class="container-fluid">
-			<picture>
-				<source srcset="/images/tasvideosbg.avif" type="image/avif">
-				<source srcset="/images/tasvideosbg.webp" type="image/webp">
-				<img class="site-banner" src="/images/tasvideosbg.jpg">
-			</picture>
+			<div class="site-banner h-100 overflow-hidden position-absolute start-0">
+				<picture>
+					<source srcset="/images/tasvideosbg.avif" type="image/avif">
+					<source srcset="/images/tasvideosbg.webp" type="image/webp">
+					<img src="/images/tasvideosbg.jpg">
+				</picture>
+			</div>
 			<picture>
 				<source srcset="/images/logo-light.webp" type="image/webp">
 				<img class="site-icon pixelart-image" src="/images/logo-light.png">
