--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -37,13 +37,13 @@
 	}
 }
 <card class="border border-primary">
-	<cardheader class="bg-cardprimary">
-        <row>
-            <div class="pixelart-image col-auto" condition="!string.IsNullOrWhiteSpace(Model.TierIconPath)">
+	<cardheader class="bg-cardprimary p-2">
+        <row class="gx-3">
+            <div class="pixelart-image col-auto pe-0" condition="!string.IsNullOrWhiteSpace(Model.TierIconPath)">
                 <img src="/@Model.TierIconPath" />
             </div>
-            <h4 class="col px-2 m-0"><a asp-page="View" asp-route-id="@Model.Id" class="text-decoration-none"><span class="text-dark">@Model.Title</span></a></h4>
-            <div class="col-auto">
+            <h4 class="col m-0"><a asp-page="View" asp-route-id="@Model.Id" class="text-decoration-none"><span class="text-dark">@Model.Title</span></a></h4>
+            <div class="col-auto ps-0">
                 @foreach (var flag in Model.Flags.Where(f => !string.IsNullOrWhiteSpace(f.IconPath)))
                 {
                     <a href="@flag.LinkPath">
@@ -53,16 +53,12 @@
             </div>
         </row>
 	</cardheader>
-    <cardbody class="px-0 py-0">
-        <div condition="@Model.ObsoletedById.HasValue" class="col card-subtitle text-danger my-2">
-            <row>
-                <b>This movie has been obsoleted!</b>
-            </row>
-            <row>
-                <pub-link id="Model.ObsoletedById!.Value" class="btn btn-danger btn-sm">Obsoleting Movie</pub-link>
-            </row>
+    <cardbody class="px-2 py-0">
+        <div condition="@Model.ObsoletedById.HasValue" class="col card-subtitle text-dark my-2">
+            <b>This movie has been obsoleted!</b><br />
+            <pub-link id="Model.ObsoletedById!.Value" class="btn bg-dark text-white btn-sm">Obsoleting Movie</pub-link>
         </div>
-        <row class="bg-cardsecondary py-3 mx-0">
+        <row class="bg-cardsecondary gx-3 py-2">
             <div class="col-auto mb-4 mb-md-0 mx-auto text-center text-md-start">
                 <div>
                     <img src="~/media/@Model.Screenshot.Path"
@@ -130,16 +126,16 @@
                 </fullrow>
             </div>
         </row>
-        <row condition="Model.ObsoletedMovies.Any()" class="border-bottom mb-2">
+        <row condition="Model.ObsoletedMovies.Any()" class="border-bottom my-2 gx-3">
             @foreach (var obsoletedMovie in Model.ObsoletedMovies)
             {
-                <column class="mt-2 mb-2">
+                <column class="mb-2">
                     Obsoletes:<br />
                     <pub-link id="obsoletedMovie.Id">@obsoletedMovie.Title</pub-link>
                 </column>
             }
         </row>
-        <row class="mx-0 my-2">
+        <row class="my-2 gx-3">
             <div condition="Model.GenreTags.Any()" class="col-auto">
                 <small>
                     Genres:<br />
