fix banner width issues on mobile

--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 <body>
     <nav id="banner" class="navbar navbar-expand-md navbar-dark mb-4">
 		<div class="container-fluid">
-			<div class="site-banner h-100 overflow-hidden position-absolute start-0">
+			<div class="site-banner h-100 w-100 overflow-hidden position-absolute start-0">
 				<picture>
 					<source srcset="/images/tasvideosbg.avif" type="image/avif">
 					<source srcset="/images/tasvideosbg.webp" type="image/webp">
