add table container to fix remaining cases of tables overflowing on mobile

--- a/TASVideos/Pages/Games/Index.cshtml
+++ b/TASVideos/Pages/Games/Index.cshtml
@@ -96,7 +96,7 @@
 <alert type="warning" condition="!Model.Game.Roms.Any()" class="mt-3">
 	No records.
 </alert>
-<div condition="Model.Game.Roms.Any()">
+<div condition="Model.Game.Roms.Any()" class="table-container">
 	<table class="table table-striped">
 		<tr>
 			<th>Type</th>
