--- a/TASVideos/Pages/Shared/Components/BrokenLinks/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/BrokenLinks/Default.cshtml
@@ -19,39 +19,43 @@
 }
 
 <label class="float-end">Total: @brokenLinks.Count</label>
-<table class="table table-striped">
-	<tbody>
-		<tr>
-			<th>Page</th>
-			<th>Linked From</th>
-			<th>Excerpt</th>
-		</tr>
-		@foreach (var link in brokenLinks)
-		{
+<div class="table-container">
+	<table class="table table-striped">
+		<tbody>
 			<tr>
-				<td style="max-width: 400px; overflow-x: auto"><a href="/@WikiHelper.ProcessLink(link.Referral)">@Html.Encode(WikiHelper.ProcessLink(link.Referral))</a></td>
-				<td><a href="/@WikiHelper.ProcessLink(link.Referrer)">@WikiHelper.ProcessLink(link.Referrer)</a></td>
-				<td><i>@link.Excerpt</i></td>
+				<th>Page</th>
+				<th>Linked From</th>
+				<th>Excerpt</th>
 			</tr>
-		}
-	</tbody>
-</table>
+			@foreach (var link in brokenLinks)
+			{
+				<tr>
+					<td style="max-width: 400px; overflow-x: auto"><a href="/@WikiHelper.ProcessLink(link.Referral)">@Html.Encode(WikiHelper.ProcessLink(link.Referral))</a></td>
+					<td><a href="/@WikiHelper.ProcessLink(link.Referrer)">@WikiHelper.ProcessLink(link.Referrer)</a></td>
+					<td><i>@link.Excerpt</i></td>
+				</tr>
+			}
+		</tbody>
+	</table>
+</div>
 
 <label class="float-end">Total: @missingTranslations.Count</label>
-<table class="table table-striped">
-	<tbody>
-		<tr>
-			<th>Page</th>
-			<th>Linked From</th>
-			<th>Excerpt</th>
-		</tr>
-		@foreach (var link in missingTranslations)
-		{
+<div class="table-container">
+	<table class="table table-striped">
+		<tbody>
 			<tr>
-				<td style="max-width: 400px; overflow-x: auto"><a href="/@WikiHelper.ProcessLink(link.Referral)">@Html.Encode(WikiHelper.ProcessLink(link.Referral))</a></td>
-				<td><a href="/@WikiHelper.ProcessLink(link.Referrer)">@WikiHelper.ProcessLink(link.Referrer)</a></td>
-				<td><i>@link.Excerpt</i></td>
+				<th>Page</th>
+				<th>Linked From</th>
+				<th>Excerpt</th>
 			</tr>
-		}
-	</tbody>
-</table>
+			@foreach (var link in missingTranslations)
+			{
+				<tr>
+					<td style="max-width: 400px; overflow-x: auto"><a href="/@WikiHelper.ProcessLink(link.Referral)">@Html.Encode(WikiHelper.ProcessLink(link.Referral))</a></td>
+					<td><a href="/@WikiHelper.ProcessLink(link.Referrer)">@WikiHelper.ProcessLink(link.Referrer)</a></td>
+					<td><i>@link.Excerpt</i></td>
+				</tr>
+			}
+		</tbody>
+	</table>
+</div>
