--- a/TASVideos/Pages/Shared/Components/MoviesList/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/MoviesList/Default.cshtml
@@ -9,7 +9,7 @@
 	Unknown System Code: @Model.SystemCode
 </warning-alert>
 
-<div condition="!string.IsNullOrWhiteSpace(Model.SystemName)">
+<div condition="!string.IsNullOrWhiteSpace(Model.SystemName)" class="table-container">
 	<table class="table table-striped">
 		<tr>
 			<th>Game</th>
