--- a/TASVideos/Pages/Shared/Components/UnmirroredMovies/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/UnmirroredMovies/Default.cshtml
@@ -1,20 +1,22 @@
 ﻿@model IEnumerable<UnmirroredMovieEntry>
 
 Total count: @Model.Count()
-<table class="table table-striped">
-	<thead>
-	<tr>
-		<th>Movie</th>
-		<th>Filename (if found)</th>
-	</tr>
-	</thead>
-	<tbody>
-		@foreach (var entry in Model)
-		{
+<div class="table-container">
+	<table class="table table-striped">
+		<thead>
 			<tr>
-				<td ><pub-link id="@entry.Id">@entry.Title</pub-link></td>
-				<td>@Html.Raw(string.Join("<br>", entry.EncodePaths))</td>
+				<th>Movie</th>
+				<th>Filename (if found)</th>
 			</tr>
-		}
-	</tbody>
-</table>
+		</thead>
+		<tbody>
+			@foreach (var entry in Model)
+			{
+				<tr>
+					<td><pub-link id="@entry.Id">@entry.Title</pub-link></td>
+					<td>@Html.Raw(string.Join("<br>", entry.EncodePaths))</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+</div>
