--- a/TASVideos/Pages/Activity/Judges.cshtml
+++ b/TASVideos/Pages/Activity/Judges.cshtml
@@ -18,24 +18,26 @@ Accepted: @acceptedTotal (@acceptedTotal.ToPercent(total)%)
 Rejected: @rejectedTotal (@rejectedTotal.ToPercent(total)%)
 Cancelled: @cancelledTotal (@cancelledTotal.ToPercent(total)%)
 <hr />
-<table class="table table-striped">
-	<tr>
-		<th>Date</th>
-		<th>Submission</th>
-		<th>Decision</th>
-	</tr>
-	@foreach (var sub in Model.Submissions.OrderBy(s => s.Id))
-	{
+<div class="table-container">
+	<table class="table table-striped">
 		<tr>
-			<td>
-				<timezone-convert asp-for="@sub.CreateTimestamp" date-only="true" />
-			</td>
-			<td>
-				<sub-link id="sub.Id">@sub.Title</sub-link>
-			</td>
-			<td>
-				@sub.Status.EnumDisplayName()
-			</td>
+			<th>Date</th>
+			<th>Submission</th>
+			<th>Decision</th>
 		</tr>
-	}
-</table>
+		@foreach (var sub in Model.Submissions.OrderBy(s => s.Id))
+		{
+			<tr>
+				<td>
+					<timezone-convert asp-for="@sub.CreateTimestamp" date-only="true" />
+				</td>
+				<td>
+					<sub-link id="sub.Id">@sub.Title</sub-link>
+				</td>
+				<td>
+					@sub.Status.EnumDisplayName()
+				</td>
+			</tr>
+		}
+	</table>
+</div>
