--- a/TASVideos/Pages/Forum/Posts/Unanswered.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Unanswered.cshtml
@@ -5,28 +5,28 @@
 }
 <partial Name="_ForumHeader" />
 <partial name="_Pager" model="Model.Posts" />
-
-<table class="table table-striped table-bordered">
-	<tr>
-		<th>@Html.DisplayNameFor(m => m.Posts.First().ForumName)</th>
-		<th>@Html.DisplayNameFor(m => m.Posts.First().TopicName)</th>
-		<th>@Html.DisplayNameFor(m => m.Posts.First().AuthorName)</th>
-		<th>@Html.DisplayNameFor(m => m.Posts.First().PostDate)</th>
-	</tr>
-	@foreach (var post in Model.Posts)
-	{
+<div class="table-container">
+	<table class="table table-striped table-bordered">
 		<tr>
-			<td>
-				<a asp-page="/Forum/Subforum/Index" asp-route-id="@post.ForumId">@post.ForumName</a>
-			</td>
-			<td>
-				<a asp-page="/Forum/Topics/Index" asp-route-id="@post.TopicId">@post.TopicName</a>
-			</td>
-			<td>
-				<profile-link username="@post.AuthorName"></profile-link>
-			</td>
-			<td><timezone-convert asp-for="@post.PostDate"/></td>
+			<th>@Html.DisplayNameFor(m => m.Posts.First().ForumName)</th>
+			<th>@Html.DisplayNameFor(m => m.Posts.First().TopicName)</th>
+			<th>@Html.DisplayNameFor(m => m.Posts.First().AuthorName)</th>
+			<th>@Html.DisplayNameFor(m => m.Posts.First().PostDate)</th>
 		</tr>
-	}
-</table>
-
+		@foreach (var post in Model.Posts)
+		{
+			<tr>
+				<td>
+					<a asp-page="/Forum/Subforum/Index" asp-route-id="@post.ForumId">@post.ForumName</a>
+				</td>
+				<td>
+					<a asp-page="/Forum/Topics/Index" asp-route-id="@post.TopicId">@post.TopicName</a>
+				</td>
+				<td>
+					<profile-link username="@post.AuthorName"></profile-link>
+				</td>
+				<td><timezone-convert asp-for="@post.PostDate" /></td>
+			</tr>
+		}
+	</table>
+</div>
