--- a/TASVideos/Pages/Profile/Unrated.cshtml
+++ b/TASVideos/Pages/Profile/Unrated.cshtml
@@ -6,17 +6,19 @@
 }
 
 <h4>Unrated Movies</h4>
-<table class="table table-striped">
+<div class="table-container">
+	<table class="table table-striped">
 
-	@foreach (var pub in Model.UnratedMovies.OrderBy(p => p.Title))
-	{
-		<tr>
-			<td>
-				<a asp-page="/Publications/Rate" asp-route-id="@pub.Id" asp-route-returnUrl="@HttpContext.ReturnUrl()" class="btn bg-primary text-white btn-sm">Rate</a>
-			</td>
-			<td>
-				<a href="/@(pub.Id)M">@pub.Title</a>
-			</td>
-		</tr>
-	}
-</table>
+		@foreach (var pub in Model.UnratedMovies.OrderBy(p => p.Title))
+		{
+			<tr>
+				<td>
+					<a asp-page="/Publications/Rate" asp-route-id="@pub.Id" asp-route-returnUrl="@HttpContext.ReturnUrl()" class="btn bg-primary text-white btn-sm">Rate</a>
+				</td>
+				<td>
+					<a href="/@(pub.Id)M">@pub.Title</a>
+				</td>
+			</tr>
+		}
+	</table>
+</div>
