--- a/TASVideos/Pages/Publications/Authors.cshtml
+++ b/TASVideos/Pages/Publications/Authors.cshtml
@@ -7,28 +7,29 @@
 <cache enabled="@(!User.IsLoggedIn())" expires-after="@TimeSpan.FromSeconds(60)">
 	@await Component.RenderWiki("System/PlayersHeader")
 </cache>
-
-<table class="table table-striped table-bordered table-sm">
-	<tr>
-		<th>@Html.DisplayNameFor(m => m.Authors.First().UserName)</th>
-		<th>@Html.DisplayNameFor(m => m.Authors.First().ActivePublicationCount)</th>
-		<th>@Html.DisplayNameFor(m => m.Authors.First().ObsoletePublicationCount)</th>
-	</tr>
-	@foreach (var author in Model.Authors
-	   .OrderByDescending(a => a.ActivePublicationCount)
-	   .ThenByDescending(a => a.ObsoletePublicationCount)
-	   .ThenBy(a => a.UserName))
-	{
+<div class="table-container">
+	<table class="table table-striped table-bordered table-sm">
 		<tr>
-			<td>
-				<profile-link username="@author.UserName"></profile-link>
-			</td>
-			<td>
-				<a href="/Movies-List-author@(author.Id)">@author.ActivePublicationCount</a>
-			</td>
-			<td>
-				<a href="/Movies-List-author@(author.Id)-obs">@author.ObsoletePublicationCount</a>
-			</td>
+			<th>@Html.DisplayNameFor(m => m.Authors.First().UserName)</th>
+			<th>@Html.DisplayNameFor(m => m.Authors.First().ActivePublicationCount)</th>
+			<th>@Html.DisplayNameFor(m => m.Authors.First().ObsoletePublicationCount)</th>
 		</tr>
-	}
-</table>
+		@foreach (var author in Model.Authors
+		  .OrderByDescending(a => a.ActivePublicationCount)
+		  .ThenByDescending(a => a.ObsoletePublicationCount)
+		  .ThenBy(a => a.UserName))
+		{
+			<tr>
+				<td>
+					<profile-link username="@author.UserName"></profile-link>
+				</td>
+				<td>
+					<a href="/Movies-List-author@(author.Id)">@author.ActivePublicationCount</a>
+				</td>
+				<td>
+					<a href="/Movies-List-author@(author.Id)-obs">@author.ObsoletePublicationCount</a>
+				</td>
+			</tr>
+		}
+	</table>
+</div>
