--- a/TASVideos/Pages/RamAddresses/Index.cshtml
+++ b/TASVideos/Pages/RamAddresses/Index.cshtml
@@ -28,24 +28,26 @@
 }
 
 <a asp-page="Edit" asp-route-id="@Model.Id" permission="EditRamAddresses" class="btn bg-primary text-white float-end mb-2">Edit</a>
-<table class="table table-striped table-bordered">
-	<tr>
-		<th>Domain</th>
-		<th>Address</th>
-		<th>Data Type</th>
-		<th>Signed</th>
-		<th>Endian</th>
-		<th>Description</th>
-	</tr>
-	@foreach (var address in Model.Addresses.OrderBy(a => a.Address))
-	{
+<div class="table-container">
+	<table class="table table-striped table-bordered">
 		<tr>
-			<td>@address.GameRamAddressDomain!.Name</td>
-			<td>@FormatAddress(address.Address)</td>
-			<td>@address.Type</td>
-			<td>@address.Signed</td>
-			<td>@address.Endian</td>
-			<td>@address.Description</td>
+			<th>Domain</th>
+			<th>Address</th>
+			<th>Data Type</th>
+			<th>Signed</th>
+			<th>Endian</th>
+			<th>Description</th>
 		</tr>
-	}
-</table>
+		@foreach (var address in Model.Addresses.OrderBy(a => a.Address))
+		{
+			<tr>
+				<td>@address.GameRamAddressDomain!.Name</td>
+				<td>@FormatAddress(address.Address)</td>
+				<td>@address.Type</td>
+				<td>@address.Signed</td>
+				<td>@address.Endian</td>
+				<td>@address.Description</td>
+			</tr>
+		}
+	</table>
+</div>
