--- a/TASVideos/Pages/RamAddresses/List.cshtml
+++ b/TASVideos/Pages/RamAddresses/List.cshtml
@@ -3,22 +3,23 @@
 @{
 	ViewData["Title"] = "Listing of Games With Addresses";
 }
-
-<table class="table table-striped table-bordered">
-	<tr>
-		<th>Game</th>
-		<th>System</th>
-		<th></th>
-	</tr>
-	@foreach (var entry in Model.Entries.OrderBy(e => e.SystemCode).ThenBy(e => e.GameName))
-	{
+<div class="table-container">
+	<table class="table table-striped table-bordered">
 		<tr>
-			<td>@entry.GameName</td>
-			<td>@entry.SystemCode</td>
-			<td>
-				<a asp-page="Index" asp-route-id="@entry.GameId" class="btn bg-secondary text-white">View</a>
-				<a asp-page="Edit" asp-route-id="@entry.GameId" permission="EditRamAddresses" class="btn bg-primary text-white">Edit</a>
-			</td>
+			<th>Game</th>
+			<th>System</th>
+			<th></th>
 		</tr>
-	}
-</table>
+		@foreach (var entry in Model.Entries.OrderBy(e => e.SystemCode).ThenBy(e => e.GameName))
+		{
+			<tr>
+				<td>@entry.GameName</td>
+				<td>@entry.SystemCode</td>
+				<td>
+					<a asp-page="Index" asp-route-id="@entry.GameId" class="btn bg-secondary text-white">View</a>
+					<a asp-page="Edit" asp-route-id="@entry.GameId" permission="EditRamAddresses" class="btn bg-primary text-white">Edit</a>
+				</td>
+			</tr>
+		}
+	</table>
+</div>
