--- a/TASVideos/Pages/Ratings/Index.cshtml
+++ b/TASVideos/Pages/Ratings/Index.cshtml
@@ -12,28 +12,30 @@
 	<label>@Model.Publication.Ratings.Count() total ratings</label>
 	<br />
 	<label>Rating Average: @Model.Publication.OverallRating</label>
-	<table class="table table-striped table-bordered">
-		<tr>
-			<th>@Html.DisplayNameFor(m => m.Publication.Ratings.First().UserName)</th>
-			<th>@Html.DisplayNameFor(m => m.Publication.Ratings.First().Entertainment)</th>
-			<th>@Html.DisplayNameFor(m => m.Publication.Ratings.First().TechQuality)</th>
-		</tr>
-		@foreach (var ratings in Model.VisibleRatings.OrderBy(r => r.UserName))
-		{
-			<tr @Html.Raw(!ratings.IsPublic ? "style=\"opacity: 0.50\"" : "")>
-				<td>@(ratings.IsPublic ? "" : "*") @ratings.UserName</td>
-				<td>@ratings.Entertainment</td>
-				<td>@ratings.TechQuality</td>
-			</tr>
-		}
-		<tfoot>
+	<div class="table-container">
+		<table class="table table-striped table-bordered">
 			<tr>
-				<th>Average</th>
-				<td>@Model.Publication.AverageEntertainmentRating</td>
-				<td>@Model.Publication.AverageTechRating</td>
+				<th>@Html.DisplayNameFor(m => m.Publication.Ratings.First().UserName)</th>
+				<th>@Html.DisplayNameFor(m => m.Publication.Ratings.First().Entertainment)</th>
+				<th>@Html.DisplayNameFor(m => m.Publication.Ratings.First().TechQuality)</th>
 			</tr>
-		</tfoot>
-	</table>
+			@foreach (var ratings in Model.VisibleRatings.OrderBy(r => r.UserName))
+			{
+				<tr @Html.Raw(!ratings.IsPublic ? "style=\"opacity: 0.50\"" : "")>
+					<td>@(ratings.IsPublic ? "" : "*") @ratings.UserName</td>
+					<td>@ratings.Entertainment</td>
+					<td>@ratings.TechQuality</td>
+				</tr>
+			}
+			<tfoot>
+				<tr>
+					<th>Average</th>
+					<td>@Model.Publication.AverageEntertainmentRating</td>
+					<td>@Model.Publication.AverageTechRating</td>
+				</tr>
+			</tfoot>
+		</table>
+	</div>
 }
 else
 {
