--- a/TASVideos/Pages/Shared/Components/UserMovies/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/UserMovies/Default.cshtml
@@ -1,21 +1,23 @@
 ﻿@model IEnumerable<TASVideos.Pages.UserFiles.Models.UserMovieListModel>
-
-<table class="table table-striped table-bordered table-sm">
-	<tr>
-		<th>@Html.DisplayNameFor(m => m.First().UploadTimestamp)</th>
-		<th>@Html.DisplayNameFor(m => m.First().Author)</th>
-		<th>@Html.DisplayNameFor(m => m.First().FileName)</th>
-		<th>@Html.DisplayNameFor(m => m.First().Title)</th>
-	</tr>
-
-	@foreach (var item in Model)
-	{
+<div class="table-container">
+	<table class="table table-striped table-bordered table-sm">
 		<tr>
-			<td><timezone-convert asp-for="@item.UploadTimestamp" date-only="true" /></td>
-			<td>@item.Author</td>
-			<td><a asp-page="/Userfiles/Info" asp-route-id="@item.Id">@item.FileName</a></td>
-			<td>@item.Title</td>
+			<th>@Html.DisplayNameFor(m => m.First().UploadTimestamp)</th>
+			<th>@Html.DisplayNameFor(m => m.First().Author)</th>
+			<th>@Html.DisplayNameFor(m => m.First().FileName)</th>
+			<th>@Html.DisplayNameFor(m => m.First().Title)</th>
 		</tr>
-	}
-</table>
+
+		@foreach (var item in Model)
+		{
+			<tr>
+				<td><timezone-convert asp-for="@item.UploadTimestamp" date-only="true" /></td>
+				<td>@item.Author</td>
+				<td><a asp-page="/Userfiles/Info" asp-route-id="@item.Id">@item.FileName</a></td>
+				<td>@item.Title</td>
+			</tr>
+		}
+	</table>
+	>
+</div>
 <a class="btn bg-secondary text-white btn-sm" asp-page="/UserFiles/Index">More WIPs</a>
