--- a/TASVideos/Pages/Shared/Components/WikiOrphans/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/WikiOrphans/Default.cshtml
@@ -1,22 +1,24 @@
 ﻿@model IEnumerable<TASVideos.Core.Services.WikiOrphan>
 
 <label class="float-end">Total: @Model.Count()</label>
-<table class="table table-striped">
-	<tbody>
-		<tr>
-			<th>Last Modified</th>
-			<th>Page</th>
-			<th>Last Author</th>
-		</tr>
-		@foreach (var orphan in Model)
-		{
+<div class="table-container">
+	<table class="table table-striped">
+		<tbody>
 			<tr>
-				<td>@orphan.LastUpdateTimestamp</td>
-				<td>
-					<wiki-link page-name="@orphan.PageName"></wiki-link>
-				</td>
-				<td>@orphan.LastUpdateUserName</td>
+				<th>Last Modified</th>
+				<th>Page</th>
+				<th>Last Author</th>
 			</tr>
-		}
-	</tbody>
-</table>
+			@foreach (var orphan in Model)
+			{
+				<tr>
+					<td>@orphan.LastUpdateTimestamp</td>
+					<td>
+						<wiki-link page-name="@orphan.PageName"></wiki-link>
+					</td>
+					<td>@orphan.LastUpdateUserName</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+</div>
