--- a/TASVideos/Pages/Submissions/Index.cshtml
+++ b/TASVideos/Pages/Submissions/Index.cshtml
@@ -84,33 +84,35 @@
 </form>
 <hr />
 <partial name="_Pager" model="Model.Submissions" />
-<table class="table table-striped table-bordered">
-	<sortable-table-head model-type="typeof(SubmissionListEntry)" sorting="Model.Search" />
-	@foreach (var item in Model.Submissions)
-	{
-		var showTier = !string.IsNullOrWhiteSpace(item.IntendedTier) && item.IntendedTier != "Standard";
-		<tr>
-			<td>@item.System</td>
-			<td><sub-link id="item.Id">@item.GameName</sub-link></td>
-			<td>@item.Branch</td>
-			<td>@(item.Time.ToStringWithOptionalDaysAndHours())</td>
-			<td>@item.Author</td>
-			<td><timezone-convert asp-for="@item.Submitted" date-only="true" /></td>
-			<td>
-				@item.Status.EnumDisplayName()
-				<small condition="showTier">
-					(@item.IntendedTier)
-				</small>
-				<small condition="item.Judge != null && item.Publisher == null">
-					<br /><profile-link username="@item.Judge"></profile-link>
-				</small>
-				<small condition="item.Publisher != null">
-					<br /><profile-link username="@item.Publisher"></profile-link>
-				</small>
-				<small condition="item.HoursRemainingForJudging() > 0">
-					<br />(Available for judging in @item.HoursRemainingForJudging() hours)
-				</small>
-			</td>
-		</tr>
-	}
-</table>
+<div class="table-container">
+	<table class="table table-striped table-bordered">
+		<sortable-table-head model-type="typeof(SubmissionListEntry)" sorting="Model.Search" />
+		@foreach (var item in Model.Submissions)
+		{
+			var showTier = !string.IsNullOrWhiteSpace(item.IntendedTier) && item.IntendedTier != "Standard";
+			<tr>
+				<td>@item.System</td>
+				<td><sub-link id="item.Id">@item.GameName</sub-link></td>
+				<td>@item.Branch</td>
+				<td>@(item.Time.ToStringWithOptionalDaysAndHours())</td>
+				<td>@item.Author</td>
+				<td><timezone-convert asp-for="@item.Submitted" date-only="true" /></td>
+				<td>
+					@item.Status.EnumDisplayName()
+					<small condition="showTier">
+						(@item.IntendedTier)
+					</small>
+					<small condition="item.Judge != null && item.Publisher == null">
+						<br /><profile-link username="@item.Judge"></profile-link>
+					</small>
+					<small condition="item.Publisher != null">
+						<br /><profile-link username="@item.Publisher"></profile-link>
+					</small>
+					<small condition="item.HoursRemainingForJudging() > 0">
+						<br />(Available for judging in @item.HoursRemainingForJudging() hours)
+					</small>
+				</td>
+			</tr>
+		}
+	</table>
+</div>
