--- a/TASVideos/Pages/Wiki/PageHistory.cshtml
+++ b/TASVideos/Pages/Wiki/PageHistory.cshtml
@@ -9,49 +9,50 @@
 
 </div>
 <hr />
-<table class="table table-striped table-light table-sm">
-	<thead>
-		<tr>
-			<th>@Html.DisplayNameFor(m => m.History.Revisions.First().Revision)</th>
-			<th>@Html.DisplayNameFor(m => m.History.Revisions.First().CreateTimestamp)</th>
-			<th>@Html.DisplayNameFor(m => m.History.Revisions.First().CreateUserName)</th>
-			<th>@Html.DisplayNameFor(m => m.History.Revisions.First().MinorEdit)</th>
-			<th>@Html.DisplayNameFor(m => m.History.Revisions.First().RevisionMessage)</th>
-			<th>Diff</th>
-			<th>Actions</th>
-		</tr>
-	</thead>
-	<tbody data-hasrevisions="true">
-		@{ var revisions = Model.History.Revisions.OrderByDescending(r => r.Revision).ToList(); }
-		@for (var i = 0; i < revisions.Count; i++)
-		{
-			var revision = revisions[i];
-			var previousId = i < revisions.Count - 1 ? revisions[i + 1].Revision : (int?)null;
-			<tr data-revision="@revision.Revision">
-				<td><a href="/@(Model.History.PageName)?revision=@revision.Revision">@revision.Revision</a></td>
-				<td><timezone-convert asp-for="@revision.CreateTimestamp" /></td>
-				<td>@revision.CreateUserName</td>
-				<td>@revision.MinorEdit</td>
-				<td>@revision.RevisionMessage</td>
-				<td style="min-width: 100px">
-					<button disabled="@(!previousId.HasValue)" class="btn bg-secondary text-white btn-sm" onclick="GetDiff(@previousId, @revision.Revision)">Prev</button>
-					<button class="btn bg-info text-dark btn-sm" data-from="true" onClick="GetDiff(@revision.Revision, null)">From</button>
-					<button class="btn bg-info text-dark btn-sm" data-to="true" onClick="GetDiff(null, @revision.Revision)">To</button>
-				</td>
-				<td>
-					<delete-button
-						permission="DeleteWikiPages"
-						asp-href="/Wiki/DeletedPages/DeleteRevision?path=@(Model.History.PageName)&revision=@revision.Revision"
-						warning-message="Are you sure you want to delete this revision?"
-						class="btn-sm">
-						<i class="fa fa-remove"></i>
-					</delete-button>
-				</td>
+<div class="table-container">
+	<table class="table table-striped table-light table-sm">
+		<thead>
+			<tr>
+				<th>@Html.DisplayNameFor(m => m.History.Revisions.First().Revision)</th>
+				<th>@Html.DisplayNameFor(m => m.History.Revisions.First().CreateTimestamp)</th>
+				<th>@Html.DisplayNameFor(m => m.History.Revisions.First().CreateUserName)</th>
+				<th>@Html.DisplayNameFor(m => m.History.Revisions.First().MinorEdit)</th>
+				<th>@Html.DisplayNameFor(m => m.History.Revisions.First().RevisionMessage)</th>
+				<th>Diff</th>
+				<th>Actions</th>
 			</tr>
-		}
-	</tbody>
-</table>
-
+		</thead>
+		<tbody data-hasrevisions="true">
+			@{ var revisions = Model.History.Revisions.OrderByDescending(r => r.Revision).ToList(); }
+			@for (var i = 0; i < revisions.Count; i++)
+			{
+				var revision = revisions[i];
+				var previousId = i < revisions.Count - 1 ? revisions[i + 1].Revision : (int?)null;
+				<tr data-revision="@revision.Revision">
+					<td><a href="/@(Model.History.PageName)?revision=@revision.Revision">@revision.Revision</a></td>
+					<td><timezone-convert asp-for="@revision.CreateTimestamp" /></td>
+					<td>@revision.CreateUserName</td>
+					<td>@revision.MinorEdit</td>
+					<td>@revision.RevisionMessage</td>
+					<td style="min-width: 100px">
+						<button disabled="@(!previousId.HasValue)" class="btn bg-secondary text-white btn-sm" onclick="GetDiff(@previousId, @revision.Revision)">Prev</button>
+						<button class="btn bg-info text-dark btn-sm" data-from="true" onClick="GetDiff(@revision.Revision, null)">From</button>
+						<button class="btn bg-info text-dark btn-sm" data-to="true" onClick="GetDiff(null, @revision.Revision)">To</button>
+					</td>
+					<td>
+						<delete-button
+							permission="DeleteWikiPages"
+							asp-href="/Wiki/DeletedPages/DeleteRevision?path=@(Model.History.PageName)&revision=@revision.Revision"
+							warning-message="Are you sure you want to delete this revision?"
+							class="btn-sm">
+							<i class="fa fa-remove"></i>
+						</delete-button>
+					</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+</div>
 <input type="hidden" id="left-revision" />
 <input type="hidden" id="right-revision" />
 <div id="diff-options" class="d-none">
