--- a/TASVideos/Pages/Wiki/SiteMap.cshtml
+++ b/TASVideos/Pages/Wiki/SiteMap.cshtml
@@ -3,22 +3,23 @@
 @{ 
 	ViewData["Title"] = "Site Map";
 }
-
-<table class="table table-striped">
-	<tr>
-		<th>@Html.DisplayNameFor(m => m.Map.First().PageName)</th>
-		<th>@Html.DisplayNameFor(m => m.Map.First().IsWiki)</th>
-		<th>@Html.DisplayNameFor(m => m.Map.First().AccessRestriction)</th>
-	</tr>
-	@foreach (var item in Model.Map.OrderBy(m => m.PageName))
-	{
+<div class="table-container">
+	<table class="table table-striped">
 		<tr>
-			<td>
-				<span Condition="@item.PageName.Contains('/')" style="padding-left: 20px;"></span>
-				<a href="/@item.PageName">@item.PageName</a>
-			</td>
-			<td>@(item.IsWiki ? "Wiki" : "Built In")</td>
-			<td>@item.AccessRestriction</td>
+			<th>@Html.DisplayNameFor(m => m.Map.First().PageName)</th>
+			<th>@Html.DisplayNameFor(m => m.Map.First().IsWiki)</th>
+			<th>@Html.DisplayNameFor(m => m.Map.First().AccessRestriction)</th>
 		</tr>
-	}
-</table>
+		@foreach (var item in Model.Map.OrderBy(m => m.PageName))
+		{
+			<tr>
+				<td>
+					<span Condition="@item.PageName.Contains('/')" style="padding-left: 20px;"></span>
+					<a href="/@item.PageName">@item.PageName</a>
+				</td>
+				<td>@(item.IsWiki ? "Wiki" : "Built In")</td>
+				<td>@item.AccessRestriction</td>
+			</tr>
+		}
+	</table>
+</div>
