--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -33,8 +33,13 @@
 				</picture>
 			</div>
 			<picture>
-				<source srcset="/images/logo-light.webp" type="image/webp">
-				<img class="site-icon pixelart-image" src="/images/logo-light.png">
+				<source srcset="/images/logo-light.webp .5x,
+						/images/logo-light-2x.webp 1x,
+						/images/logo-light-4x.webp 2x"
+						type="image/webp">
+				<img class="site-icon" src="/images/logo-light-2x.png" srcset="/images/logo-light.png .5x,
+						/images/logo-light-2x.png 1x,
+						/images/logo-light-4x.png 2x">
 			</picture>
 			<div id="mantra">
 				<a id="brand" asp-page="/Index">TASVideos</a>
