Port Bootstrap 4 spacing to bootstrap 5

--- a/TASVideos/Pages/Games/List.cshtml
+++ b/TASVideos/Pages/Games/List.cshtml
@@ -6,8 +6,8 @@
 
 <a asp-page="Edit" class="btn bg-primary text-white mb-3 float-end">Create</a>
 <form class="form-inline mb-3">
-	<label asp-for="@Model.Games.SystemCode" class="mr-2"></label>
-	<select asp-items="@Model.SystemList" asp-for="@Model.Games.SystemCode" name="SystemCode" class="form-control mr-2"></select>
+	<label asp-for="@Model.Games.SystemCode" class="me-2"></label>
+	<select asp-items="@Model.SystemList" asp-for="@Model.Games.SystemCode" name="SystemCode" class="form-control me-2"></select>
 	<button type="Submit" class="btn bg-secondary text-white">Go</button>
 </form>
 
