--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -16,7 +16,7 @@
 	<a permission="SetTier" class="btn bg-secondary text-white btn-sm" asp-page="EditTier" asp-route-id="@Model.Id">Edit</a>
 </fullrow>
 <hr />
-<a permission="CreateAdditionalMovieFiles" asp-page="AdditionalMovies" asp-route-id="@Model.Id" class="btn bg-primary text-white btn-sm mb-2 float-end ml-2">Additional Movie Files</a>
+<a permission="CreateAdditionalMovieFiles" asp-page="AdditionalMovies" asp-route-id="@Model.Id" class="btn bg-primary text-white btn-sm mb-2 float-end ms-2">Additional Movie Files</a>
 <a permission="EditPublicationFiles" asp-page="EditFiles" asp-route-id="@Model.Id" class="float-end btn bg-primary text-white btn-sm mb-2">Edit</a>
 <table class="table table-bordered table-sm">
 	<tr>
