--- a/TASVideos/Pages/Shared/Components/Awards/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/Awards/Default.cshtml
@@ -27,7 +27,7 @@
 {
 	<div class="mb-5">
 		<a id="@(award.ShortName)_@(award.Year)"></a>
-		<img class="float-start mr-2" alt="@award.Description" src="/awards/@(award.ShortName)_@(award.Year.ToString()).png" />
+		<img class="float-start me-2" alt="@award.Description" src="/awards/@(award.ShortName)_@(award.Year.ToString()).png" />
 		<div>
 			<strong>@award.Description</strong>
 			<br />
