--- a/TASVideos/Pages/Wiki/Diff.cshtml
+++ b/TASVideos/Pages/Wiki/Diff.cshtml
@@ -12,7 +12,7 @@
 <a class="btn bg-secondary text-white float-end" href="/@link">Back to Page</a>
 <row>
 	
-	<label class="mr-3"><input name="diff-type" type="radio" value="1" checked="checked" /> Inline</label>
+	<label class="me-3"><input name="diff-type" type="radio" value="1" checked="checked" /> Inline</label>
 	<label><input name="diff-type" type="radio" value="0" /> Side by Side</label>
 </row>
 <hr />
