--- a/TASVideos/Pages/Forum/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Edit.cshtml
@@ -33,7 +33,7 @@
 					</button>
 				</div>
 				<strong><a asp-page="/Forum/Subforum" asp-route-id="@Model.Category.Forums[i].Id">@Model.Category.Forums[i].Name</a></strong>
-				<div class="mb-2 pl-3">
+				<div class="mb-2 ps-3">
 					<small>
 						@Html.Raw(Model.Category.Forums[i].Description)
 					</small>
