--- a/TASVideos/Pages/Forum/_Category.cshtml
+++ b/TASVideos/Pages/Forum/_Category.cshtml
@@ -19,7 +19,7 @@
 			<strong>
 				<a asp-page="/Forum/Subforum/Index" asp-route-id="@forum.Id">@forum.Name</a>
 			</strong>
-			<div class="mb-2 pl-3">
+			<div class="mb-2 ps-3">
 				<small>
 					@Html.Raw(forum.Description)
 				</small>
