--- a/TASVideos/Pages/Shared/Components/DisplayMiniMovie/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/DisplayMiniMovie/Default.cshtml
@@ -8,7 +8,7 @@
 		</div>
 		<div class="card-body bg-cardsecondary">
 			<pub-link id="Model.Id">
-                <div class="float-start pr-3 pb-1" style="max-width: 80%">
+                <div class="float-start pe-3 pb-1" style="max-width: 80%">
                     <img class="pb-1" src="~/media/@Model.Screenshot.Path" alt="@Model.Screenshot.Description" />
                     <br />
                     <a href="@Model.OnlineWatchingUrl" class="btn bg-primary text-white" target="_blank">Watch</a>
