--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -94,7 +94,7 @@
 					foreach (var role in Model.Roles)
 					{
 						<label><a asp-page="/Roles/Index" asp-route-role="@role.Name">@role.Name</a></label>
-						<div class="ml-3 mt-1 mb-3">@role.Description</div>
+						<div class="ms-3 mt-1 mb-3">@role.Description</div>
 					}
 				}
 				else
