--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -96,7 +96,7 @@
 				<label asp-for="Submission.Judge"></label>:
 				<profile-link username="@Model.Submission.Judge"></profile-link>
 			</span>
-			<span class="ml-3" condition="@(!string.IsNullOrWhiteSpace(Model.Submission.Publisher))">
+			<span class="ms-3" condition="@(!string.IsNullOrWhiteSpace(Model.Submission.Publisher))">
 				<label asp-for="Submission.Publisher"></label>:
 				<profile-link username="@Model.Submission.Publisher"></profile-link>
 			</span>
@@ -155,17 +155,17 @@
 			Submitted edited by @Model.Submission.Submitter on @Model.Submission.Submitted
 		</small>
 		<div class="btn-toolbar">
-			<a condition="@canClaimAsJudge" asp-page="View" asp-route-id="@Model.Id" asp-page-handler="ClaimForJudging" class="btn btn-success mt-2 mr-1">Claim</a>
-			<a condition="@ViewData.UserHas(PermissionTo.PublishMovies) && Model.Submission.Status == SubmissionStatus.Accepted" asp-page="View" asp-route-id="@Model.Id" asp-page-handler="ClaimForPublishing" class="btn btn-success mt-2 mr-1">Claim</a>
+			<a condition="@canClaimAsJudge" asp-page="View" asp-route-id="@Model.Id" asp-page-handler="ClaimForJudging" class="btn btn-success mt-2 me-1">Claim</a>
+			<a condition="@ViewData.UserHas(PermissionTo.PublishMovies) && Model.Submission.Status == SubmissionStatus.Accepted" asp-page="View" asp-route-id="@Model.Id" asp-page-handler="ClaimForPublishing" class="btn btn-success mt-2 me-1">Claim</a>
 			<a asp-page="View" asp-page-handler="Download" asp-route-id="@Model.Id" class="btn bg-primary text-white mt-2">Download</a>
-			<a condition="@Model.TopicId > 0" asp-page="/Forum/Topics/Index" asp-route-id="@Model.TopicId" class="btn bg-secondary text-white ml-1 mt-2">Discuss and Vote</a>
+			<a condition="@Model.TopicId > 0" asp-page="/Forum/Topics/Index" asp-route-id="@Model.TopicId" class="btn bg-secondary text-white ms-1 mt-2">Discuss and Vote</a>
 			<span permission="EditSubmissions" class="btn-separator mt-2"></span>
 			<a condition="@canEdit" asp-page="Edit" asp-route-id="@Model.Id" class="btn bg-primary text-white mt-2">Edit</a>
-			<a permission="CatalogMovies" asp-page="Catalog" asp-route-id="@Model.Id" class="ml-1 btn bg-info text-dark mt-2">Catalog</a>
-			<a condition="@canPublish" asp-page="Publish" asp-route-id="@Model.Id" class="ml-1 btn btn-warning mt-2">Publish</a>
+			<a permission="CatalogMovies" asp-page="Catalog" asp-route-id="@Model.Id" class="ms-1 btn bg-info text-dark mt-2">Catalog</a>
+			<a condition="@canPublish" asp-page="Publish" asp-route-id="@Model.Id" class="ms-1 btn btn-warning mt-2">Publish</a>
 			<span class="btn-separator mt-2"></span>
 			<a asp-page="Index" class="btn bg-secondary text-white mt-2">Back to Queue</a>
-			<a asp-page="Index" asp-route-user="@Model.Submission.Submitter" class="ml-1 mt-2 btn bg-secondary text-white">All by this submitter</a>
+			<a asp-page="Index" asp-route-user="@Model.Submission.Submitter" class="ms-1 mt-2 btn bg-secondary text-white">All by this submitter</a>
 		</div>
 	</div>
 </row>
