--- a/TASVideos/Pages/Users/_UserSearch.cshtml
+++ b/TASVideos/Pages/Users/_UserSearch.cshtml
@@ -1,6 +1,6 @@
 ﻿<form asp-page="/Users/Profile" method="GET" class="form-inline" id="search-form">
-	<label class="mr-2" for="search-username-box">Search: </label>
-	<input id="search-username-box" name="name" list="search-username-list" required="required" type="search" class="form-control mr-2" placeholder="Enter a UserName" autofocus="autofocus" autocomplete="off" spellcheck="false" />
+	<label class="me-2" for="search-username-box">Search: </label>
+	<input id="search-username-box" name="name" list="search-username-list" required="required" type="search" class="form-control me-2" placeholder="Enter a UserName" autofocus="autofocus" autocomplete="off" spellcheck="false" />
 	<button id="go-button" type="submit" class="btn bg-secondary text-white" disabled="disabled">Go</button>
 	<datalist id="search-username-list"></datalist>
 	<script>
