Fix padding right reset to padding end

--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -14,7 +14,7 @@
 					Posted: <timezone-convert asp-for="@Model.CreateTimestamp" /> 
 				</small>
 			</div>
-			<div class="col-lg-10 col-md-9 col-8 pr-0" >
+			<div class="col-lg-10 col-md-9 col-8 pe-0" >
 				<small condition="!string.IsNullOrWhiteSpace(Model.Subject)" class="text-center">
 					Post subject: @Model.Subject
 				</small>
