--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -1,59 +1,58 @@
 ﻿@model TASVideos.Pages.Forum.Posts.Models.ForumPostEntry
-<card class="@(Model.Highlight ? "forum-post-highlight" : "") border border-primary">
-	<cardheader class="pt-1 pb-1">
-		<row>
-			<div class="col-lg-2 col-md-3 col-4 p-0">
-				<small style="display: inline-block">
-					<a
-						id="@Model.Id" 
-						href="/Forum/Posts/@(Model.Id)#@Model.Id" 
-						title="Link to this post" 
-						class="float-start">
-						<i class="fa fa-bookmark-o me-1"></i>
-					</a>
-					Posted: <timezone-convert asp-for="@Model.CreateTimestamp" /> 
-				</small>
-			</div>
-			<div class="col-lg-10 col-md-9 col-8 pe-0" >
-				<small condition="!string.IsNullOrWhiteSpace(Model.Subject)" class="text-center">
-					Post subject: @Model.Subject
-				</small>
-				<small class="float-end" style="display: inline-block">
-					<a
-						condition="User.IsLoggedIn()"
-						asp-page="/Messages/Create"
-						asp-route-defaultToUser="@Model.PosterName"
-						class="btn btn-secondary btn-sm">
-						PM
-					</a>
-					<a
-						asp-page="/Forum/Posts/Create"
-						asp-route-topicId="@Model.TopicId"
-						asp-route-quoteId="@Model.Id"
-						class="btn btn-secondary btn-sm">
-						Quote
-					</a>
-					<a
-						condition="Model.IsEditable"
-						asp-page="/Forum/Posts/Edit"
-						asp-route-id="@Model.Id"
-						class="btn btn-primary btn-sm">
-						Edit
-					</a>
-					<delete-button
-						condition="Model.IsDeletable"
-						asp-href="@($"/Forum/Posts/Edit/{Model.Id}?handler=Delete")"
-						warning-message="Are you sure you want to delete this post?"
-						class="btn-sm">
-						<i title="Delete this post" class="fa fa-remove"></i>
-					</delete-button>
-				</small>
-			</div>
-		</row>
+<card class="@(Model.Highlight ? "forum-post-highlight" : "") border border-primary mb-1">
+	<cardheader class="px-2 py-1">
+        <row class="align-items-center">
+            <div class="col-lg-2 col-md-3 col-auto">
+                <small>
+                    <a id="@Model.Id"
+                       href="/Forum/Posts/@(Model.Id)#@Model.Id"
+                       title="Link to this post"
+                       class="float-start text-decoration-none text-dark">
+                        <i class="fa fa-bookmark-o"></i>
+                        Posted: <timezone-convert asp-for="@Model.CreateTimestamp" />
+                    </a>
+                </small>
+            </div>
+            <div condition="!string.IsNullOrWhiteSpace(Model.Subject)" class="col-auto col-md order-last order-md-0">
+                <small>
+                    Post subject: @Model.Subject
+                </small>
+            </div>
+            <div class="ms-auto col-auto">
+                <small>
+                    <a condition="User.IsLoggedIn()"
+                       asp-page="/Messages/Create"
+                       asp-route-defaultToUser="@Model.PosterName"
+                       class="btn bg-secondary text-white btn-sm">
+                        PM
+                    </a>
+                    <a asp-page="/Forum/Posts/Create"
+                       asp-route-topicId="@Model.TopicId"
+                       asp-route-quoteId="@Model.Id"
+                       class="btn bg-secondary text-white btn-sm">
+                        Quote
+                    </a>
+                    <a condition="Model.IsEditable"
+                       asp-page="/Forum/Posts/Edit"
+                       asp-route-id="@Model.Id"
+                       class="btn bg-primary text-white btn-sm">
+                        Edit
+                    </a>
+                    <delete-button condition="Model.IsDeletable"
+                                   asp-href="@($"/Forum/Posts/Edit/{Model.Id}?handler=Delete")"
+                                   warning-message="Are you sure you want to delete this post?"
+                                   class="btn-sm">
+                        <i title="Delete this post" class="fa fa-remove"></i>
+                    </delete-button>
+                </small>
+            </div>
+        </row>
 	</cardheader>
-    <cardbody class="p-1 px-3 row d-md-none align-items-center mx-0" style="background-color: #eaeaea">
-        <avatar class="col-auto px-0 float-left" style="max-height: 5em" avatar="@Model.PosterAvatar" mood-avatar-base="@Model.PosterMoodUrlBase" mood="@Model.PosterMood" />
-        <div class="col">
+    <cardbody class="row p-2 d-md-none align-items-center mx-0 gx-2" style="background-color: var(--bs-gray-200)">
+        <div class="col-2 float-left text-center">
+            <avatar class="img-fluid" avatar="@Model.PosterAvatar" mood-avatar-base="@Model.PosterMoodUrlBase" mood="@Model.PosterMood" />
+        </div>
+        <div class="col-10 px-2">
             <h6>
                 <profile-link username="@Model.PosterName"></profile-link><br />
             </h6>
@@ -77,9 +76,9 @@
             }
         </div>
     </cardbody>
-	<cardbody class="p-2">
-		<row>
-			<div class="forum-profile-section col-lg-2 col-md-3 col-4 d-none d-md-block">
+	<cardbody class="px-2 py-0">
+		<row class="gx-3">
+			<div class="col-lg-2 col-md-3 col-4 d-none d-md-block py-2" style="background-color: var(--bs-gray-200)">
 				<div class="text-center" style="margin-left: -.5rem;">
 					<h6>
 						<profile-link username="@Model.PosterName"></profile-link>
@@ -99,15 +98,13 @@
 						Location: @Model.PosterLocation
 					</small>
 				</div>
-				<div>
+				<div class="mt-1">
 					@* ReSharper disable once UnusedVariable *@
 					@foreach (var award in Model.Awards.OrderByDescending(a => a.Year))
-					{
-						<partial name="_Award" model="award" />
-					}
+					{<partial name="_Award" model="award" />}
 				</div>
 			</div>
-			<div class="col-lg-10 col-md-9 col d-flex flex-column">
+			<div class="col-lg-10 col-md-9 col d-flex flex-column py-2">
                 <div class="mb-auto">
                     <forum-markup markup=@Model.Text enable-html=@Model.EnableHtml enable-bb-code=@Model.EnableBbCode></forum-markup>
                 </div>
