--- a/TASVideos/Pages/Shared/Components/TopicFeed/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/TopicFeed/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model TopicFeedModel
+@model TopicFeedModel
 
 <div class="@(Model.RightAlign ? "right-align-topic" : "")">
 	<h3 condition="!string.IsNullOrWhiteSpace(Model.Heading)" class="card-header topic-header">@Model.Heading</h3>
@@ -8,7 +8,7 @@
 		<div class="card">
 			<div class="card-body">
 				<h5 condition="!Model.HideContent" class="card-title">@post.Subject</h5>
-				<h5 condition="Model.HideContent"><a data-toggle="collapse" href="#@collapseId" role="button" aria-expanded="false">@post.Subject</a></h5>
+				<h5 condition="Model.HideContent"><a data-bs-toggle="collapse" href="#@collapseId" role="button" aria-expanded="false">@post.Subject</a></h5>
 				<h6 class="card-subtitle mb-2 text-muted">
 					<small>
 						posted by @post.PosterName at <timezone-convert asp-for="@post.CreateTimestamp" />
