--- a/TASVideos/Pages/Shared/_Ratings.cshtml
+++ b/TASVideos/Pages/Shared/_Ratings.cshtml
@@ -19,10 +19,10 @@
 	</alert>
 	<ul class="nav nav-tabs" role="tablist">
 		<li class="nav-item">
-			<a class="nav-link active" href="#current" role="tab" data-toggle="tab">Current</a>
+			<a class="nav-link active" href="#current" role="tab" data-bs-toggle="tab">Current</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#obsolete" role="tab" data-toggle="tab">Obsolete</a>
+			<a class="nav-link" href="#obsolete" role="tab" data-bs-toggle="tab">Obsolete</a>
 		</li>
 	</ul>
 
