--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -40,7 +40,9 @@
 }
 
 @section PageTitle {
-	<h1>@($"Submission {Model.Submission.Title}")</h1>
+	<div class="container">
+		<h1>@($"Submission {Model.Submission.Title}")</h1>
+	</div>
 }
 
 <row class="mt-2">
